<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linearMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgAll"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/infinite"
            android:src="@drawable/ic_all"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/imgHappy"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/happy"
            android:src="@drawable/ic_happy"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/imgMorning"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/sun"
            android:src="@drawable/ic_sun"
            android:tint="#FDFCFC" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text=""
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="22sp" />

    <View
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@id/txtPhrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/btnNewPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_btn"
        android:backgroundTint="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/new_phrase"
        android:textColor="@color/white" />


</RelativeLayout>